WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184650
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method
https://bugs.webkit.org/show_bug.cgi?id=184650
Summary
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method
Thibault Saunier
Reported
2018-04-16 07:59:46 PDT
This is a start to implement the feature, later on we will need to expose dedicated tags in GStreamer to retrieve other informations about the Kind (I could not find a good match).
Attachments
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method
(3.50 KB, patch)
2018-04-16 07:59 PDT
,
Thibault Saunier
no flags
Details
Formatted Diff
Diff
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method
(4.75 KB, patch)
2018-04-16 08:05 PDT
,
Thibault Saunier
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.68 MB, application/zip)
2018-04-16 11:58 PDT
,
EWS Watchlist
no flags
Details
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method
(4.91 KB, patch)
2018-04-23 06:10 PDT
,
Thibault Saunier
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Thibault Saunier
Comment 1
2018-04-16 07:59:53 PDT
Created
attachment 337998
[details]
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method In the playbin3 case we can assume that if the GstStream is selected by default, it is the Main track of that kind.
Thibault Saunier
Comment 2
2018-04-16 08:05:07 PDT
Created
attachment 338000
[details]
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method In the playbin3 case we can assume that if the GstStream is selected by default, it is the Main track of that kind.
Philippe Normand
Comment 3
2018-04-16 08:45:16 PDT
Comment on
attachment 338000
[details]
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method View in context:
https://bugs.webkit.org/attachment.cgi?id=338000&action=review
> Source/WebCore/ChangeLog:12 > + No new tests are added as we already have a few ones that are currently disabled in > + the mediastream testsuite. This patch is part of the work to enable them.
Maybe the media/ test suite has a test for this though?
> Source/WebCore/platform/graphics/gstreamer/AudioTrackPrivateGStreamer.cpp:57 > + if (m_stream.get() && gst_stream_get_stream_flags (m_stream.get()) & GST_STREAM_FLAG_SELECT)
No space before ( please :)
> Source/WebCore/platform/graphics/gstreamer/VideoTrackPrivateGStreamer.cpp:57 > + if (m_stream.get() && gst_stream_get_stream_flags (m_stream.get()) & GST_STREAM_FLAG_SELECT)
Ditto
EWS Watchlist
Comment 4
2018-04-16 11:58:32 PDT
Comment on
attachment 338000
[details]
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method
Attachment 338000
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7332931
New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 5
2018-04-16 11:58:43 PDT
Created
attachment 338022
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Thibault Saunier
Comment 6
2018-04-23 06:10:31 PDT
Created
attachment 338580
[details]
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method In the playbin3 case we can assume that if the GstStream is selected by default, it is the Main track of that kind.
Thibault Saunier
Comment 7
2018-04-23 06:12:22 PDT
(In reply to Philippe Normand from
comment #3
)
> Comment on
attachment 338000
[details]
> [GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=338000&action=review
> > > Source/WebCore/ChangeLog:12 > > + No new tests are added as we already have a few ones that are currently disabled in > > + the mediastream testsuite. This patch is part of the work to enable them. > > Maybe the media/ test suite has a test for this though?
Enhanced the ChangeLog to explain why I didn't add tests.
> > Source/WebCore/platform/graphics/gstreamer/AudioTrackPrivateGStreamer.cpp:57 > > + if (m_stream.get() && gst_stream_get_stream_flags (m_stream.get()) & GST_STREAM_FLAG_SELECT) > > No space before ( please :)
Fixed.
> > > Source/WebCore/platform/graphics/gstreamer/VideoTrackPrivateGStreamer.cpp:57 > > + if (m_stream.get() && gst_stream_get_stream_flags (m_stream.get()) & GST_STREAM_FLAG_SELECT) > > Ditto
Fixed.
EWS Watchlist
Comment 8
2018-04-23 06:12:52 PDT
Attachment 338580
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:12: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] ERROR: Source/WebCore/ChangeLog:13: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 9
2018-04-23 06:26:12 PDT
Comment on
attachment 338580
[details]
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method View in context:
https://bugs.webkit.org/attachment.cgi?id=338580&action=review
> Source/WebCore/ChangeLog:14 > + * It relies on playbin3 case which support might be compiled out > + * we already have a few test that are currently disabled in the mediastream > + testsuite. This patch is part of the work to enable them.
s/*/- maybe?
WebKit Commit Bot
Comment 10
2018-04-23 06:39:58 PDT
Comment on
attachment 338580
[details]
[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method Clearing flags on attachment: 338580 Committed
r230910
: <
https://trac.webkit.org/changeset/230910
>
WebKit Commit Bot
Comment 11
2018-04-23 06:40:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2018-04-23 06:41:22 PDT
<
rdar://problem/39644737
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug