[GStreamer] Start implementing Audio/VideoTrackPrivateGSTreamer::kind method https://bugs.webkit.org/show_bug.cgi?id=184650

Patch by Thibault Saunier <tsaunier@igalia.com> on 2018-04-23
Reviewed by Philippe Normand.

In the playbin3 case we can assume that if the GstStream is selected by default,
it is the Main track of that kind.

No new tests are added as:
    * It relies on playbin3 case which support might be compiled out
    * we already have a few test that are currently disabled in the mediastream
      testsuite. This patch is part of the work to enable them.

* platform/graphics/gstreamer/AudioTrackPrivateGStreamer.cpp:
(WebCore::AudioTrackPrivateGStreamer::kind const):
* platform/graphics/gstreamer/AudioTrackPrivateGStreamer.h:
* platform/graphics/gstreamer/VideoTrackPrivateGStreamer.cpp:
(WebCore::VideoTrackPrivateGStreamer::kind const):
* platform/graphics/gstreamer/VideoTrackPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/200386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230910 268f45cc-cd09-0410-ab3c-d52691b4dbfc