Source/WebCore/platform/graphics/gstreamer/AudioTrackPrivateGStreamer.cpp
@@ -52,6 +52,14 @@ AudioTrackPrivateGStreamer::AudioTrackPrivateGStreamer(WeakPtr<MediaPlayerPrivat
     setActive(gst_stream_get_stream_flags(stream.get()) & GST_STREAM_FLAG_SELECT);
     notifyTrackOfActiveChanged();
 }
+
+AudioTrackPrivate::Kind AudioTrackPrivateGStreamer::kind() const
+{
+    if (m_stream.get() && gst_stream_get_stream_flags(m_stream.get()) & GST_STREAM_FLAG_SELECT)
+        return AudioTrackPrivate::Kind::Main;
+
+    return AudioTrackPrivate::kind();
+}
 #endif
 
 void AudioTrackPrivateGStreamer::disconnect()
