Source/WebCore/platform/graphics/gstreamer/AudioTrackPrivateGStreamer.h
@@ -48,6 +48,8 @@ public:
     {
         return adoptRef(*new AudioTrackPrivateGStreamer(player, index, stream));
     }
+
+    Kind kind() const final;
 #endif
 
     void disconnect() override;
